Add base URL Remove junk from main.go Add README.md

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Test Card Generator</title>
     <link rel="stylesheet" href="./css/card.css"/>
 </head>
+<base href="http://localhost:3000/">
+<base href="https://ardesco.keybase.pub/ccgenerator/">
 <body>
 <h1>Test Card Generation Harness</h1>
 <div>
