Change font to Farrington-7b Update styling to reposition numbers to correct position

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <p id="cardNumber"></p>
         <p id="additional">
-            <span id="expires">Expires end</span><span id="expiryDate"><span id="expiryMonth"></span>/<span id="expiryYear"></span></span>
+            <span id="expires">Expires end</span><span id="expiryDate"><span id="expiryMonth"></span><span class="separator">/</span><span id="expiryYear"></span></span>
             <span id="cvv">CVV</span><span id="cardCVV"></span>
         </p>
     </div>
