Add logos for Visa and Mastercard

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </div>
 <div id="result">
     <div id="creditCard">
+        <div id="logo"></div>
         <div id="chip">
             <div class="left top"></div>
             <div class="right top"></div>
